Modificando a parte de enfatizar

--- a/aula-200623/index.html
+++ b/aula-200623/index.html
@@ -55,8 +55,7 @@ ALT + Z = Quebra a linha que ultrapassam a tela. -->
         <!-- <pre> é um texto Pré formatado -->
 
 
-        <em> Essa atividade visa proporcionar uma introdução aos conceitos básicos das tags de texto em HTML.</em>
-
+            &lt;em&gt; Essa atividade visa proporcionar uma introdução aos conceitos básicos das tags de texto em HTML.&lt;em&gt;&rarr; <em>Essa atividade visa proporcionar uma introdução aos conceitos básicos das tags de texto em HTML.</em>
 
         <hr>
 
